--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Hello World!</title>
 
   </head>
-  <body>
+  <body class="bg-gray-700">
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
   </body>
